# midichords

./: MANIFEST.in  README.md  pyproject.toml
midichords/: MIDI.py  __init__.py  helpers.py  midichords.py
midichords/artwork/: README.md
midichords/models/: README.md
